--- a/bankruptcy_data_collection.ipynb
+++ b/bankruptcy_data_collection.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save first excel file manually and click \"Do this automatically for files like this from now on\"\n",
+    "# save first .xls file manually and click \"Do this automatically for files like this from now on\"\n",
     "date = datelist[0].strftime('%d.%m.%Y')\n",
     "browser.find_element_by_id('ctl00_cphBody_cldrBeginDate_tbSelectedDate').clear()\n",
     "browser.find_element_by_id('ctl00_cphBody_cldrBeginDate_tbSelectedDate').send_keys(date)\n",
